<resources>
    <string name="app_name">FasterChef</string>
    <string name="Logo_name">FasterChef</string>
    <string name="s_logan">Something Home-Made</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<!--    <string name="edit_text_hint1"><font size="50">Phone Number</font></string>-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="menu_cart">Cart</string>
    <string name= "action_clear_cart">Clear Cart</string>
    <string name="menu_view_orders">View Orders</string>
</resources>
