<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="55dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:fontFamily="@font/cooperhewitt_bold"
            android:gravity="center"
            android:text="@string/Logo_name"
            android:textAlignment="center"
            android:textColor="#fccbbf"
            android:textSize="60sp"
            android:textStyle="normal">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#c75c41"
            android:fontFamily="@font/tahu"
            android:text="something human"
            android:id="@+id/txtSlogan"
            android:textAlignment="center"

            >
        </TextView>

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2"
        >


        <android.widget.Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#c75c41"
            android:text="@string/sign_up"
            android:textColor="@android:color/white">
            <!--            app:buttonColor= "#39796b"-->
            <!--            app:shadowColor="@android:color/black"-->
            <!--            app:shadowEnabled="true"-->
            <!--            app:shadowHeight="5dp"-->
            <!--            app:cornerRadius="4dp">-->
        </android.widget.Button>

        <android.widget.Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#c75c41"
            android:text="@string/sign_in"
            android:textColor="@android:color/white">
            <!--            app:buttonColor="@color/btnSignActive"-->
            <!--            app:shadowColor="@android:color/black"-->
            <!--            app:shadowEnabled="true"-->
            <!--            app:shadowHeight="5dp"-->
            <!--            app:cornerRadius="4dp"-->

        </android.widget.Button>

    </LinearLayout>



</RelativeLayout>